--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
-    "dev": "tsnd --transpile-only src/index.ts"
+    "dev": "tsnd --transpile-only src/index.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
